Bug 1297880: Have GetSeekable return an empty range if duration is not r=jwwang yet known. r?jwwang

MozReview-Commit-ID: 4e1k42FlW1z

--HG--
extra : rebase_source : 47c94026157a278192f2388a4d92768d5454c384